2005-11-15  Pavel Roskin  <proski@gnu.org>

	* acinclude.m4 (MC_WITH_MCSLANG): Add type tests from S-Lang
	configuration scripts.

2005-11-10  Pavel Roskin  <proski@gnu.org>

	* configure.ac: Catch unexpanded MC_* macros.

	* m4/*.m4: Update to the macros provided by gettext 0.14.3.
	* m4/Makefile.am: Update the list of the *.m4 files.

	* configure.ac: Use AC_GNU_SOURCE, which prevents redefining
	_GNU_SOURCE.  Bump Autoconf version to 2.54, where AC_GNU_SOURCE
	appeared.
	Reported by Leonard den Ottolander <leonard@den.ottolander.nl>

	* configure.ac: Use gettext 0.14.3.
	* acinclude.m4 (MC_ASM_LABELS): Remove, it's not needed with
	recent versions of gettext.

	* acinclude.m4 (MC_ASM_LABELS): Make the test function global
	and move its definition above main().  That's closer to what
	gettext is actually doing.

2005-10-03  Pavel Roskin  <proski@gnu.org>

	* configure.ac: Require gettext with ngettext support.  It's
	already used in src/info.c.

2005-09-28  Pavel Roskin  <proski@gnu.org>

	* acinclude.m4: Remove gettext 0.10.x compatibility.

2005-08-23  Marco Ciampa  <ciampix@libero.it>

	* doc/it/mc.1.in: updated italian trasnlation.
	* doc/it/xnc.hlp: small fix.

2005-08-15  Roland Illig  <roland.illig@gmx.de>

	* configure.ac: The function getgrouplist() is not used anymore,
	so there is no need to check for it. The various get[ug]id
	functions are used, so add checks for them. Same for isascii.

2005-07-20  Pavel Roskin  <proski@gnu.org>

	* lib/mc.ext.in: Restore support for opening 7-zip archives.

	* configure.ac: Add vfs/extfs/ualz to AC_CONFIG_FILES.
	* lib/mc.ext.in: Add support for ALZip archives.

2005-07-10  Leonard den Ottolander  <leonard den ottolander nl>

	* configure.ac: Rename AS_HELP_STRING to AC_HELP_STRING.

2005-07-08  Leonard den Ottolander  <leonard den ottolander nl>

	* NEWS: Fixed commit to the wrong branch.

2005-07-05  Roland Illig  <roland.illig@gmx.de>

	* configure.ac: Removed detection of the umode_t type. All