@@ -31,7 +31,7 @@ Hint: Are some of your keys not working? Look at Options/Learn keys.
 Hint: To look at the output of a command in the viewer, use M-!
 Hint: F13 (or Shift-F3) invokes the viewer in raw mode.
 Hint: You may specify the editor for F4 with the shell variable EDITOR.
-Hint: You may specify the external viewer with the shell variable PAGER.
+Hint: You may specify the external viewer with the shell vars VIEWER or PAGER.
 Hint: You can disable all requests for confirmation in Options/Confirmation.
 Hint: Leap to frequently used directories in a single bound with C-\.
 Hint: You can do anonymous FTP with mc by typing 'cd /#ftp:machine.edu'
